[package]
name = "yume-bowling"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "s"

[dependencies]
avian3d = "0.6.1"
bevy = { version = "0.18.1", default-features = false, features = [
    "3d_bevy_render",
    "default_app",
    "default_platform",
] }
bevy-inspector-egui = "0.36.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
